# kinterpreter

./: CMakeLists.txt  LICENSE  README.md  compile_commands.json  make.rb
editors/syntax/mtsx/: Mate.mtsx  derMate.mtsx
include/derMate/: config.h  environment.h  hashmap.h  interpreter.h  lexer.h  native.h  node.h  parser.h  string.h
include/derMate/util/: native.h
include/kilate/: base.h  config.h  environment.h  file.h  hashmap.h  interpreter.h  lexer.h  native.h  nativeutils.h  node.h  parser.h  platform.h  stringutils.h  vector.h
src/: config.c  debug.c  environment.c  error.c  file.c  hashmap.c  interpreter.c  lexer.c  main.c  native.c  nativeutils.c  node.c  parser.c  string.c  stringutils.c  vector.c
src/util/: native.c
std/: print.dmt  print.mt
tests/: main.mt
